# EcoChallenge

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
eco_challenge/: application.py
eco_challenge/auth/: auth.py  authservice.py  dependencies.py  jwt.py
eco_challenge/core/: database.py  time_convert.py
eco_challenge/core/models/: __init__.py  points_count_model.py  points_transaction_model.py  role_model.py  share_friends_model.py  user_model.py
eco_challenge/core/routers/: __init__.py  auth_router.py  points_count_router.py  points_transaction_router.py  role_router.py  share_friend_router.py  user_router.py
eco_challenge/core/storages/: answer_storage.py  daily_task_history_storage.py  daily_task_storage.py  points_count_storage.py  points_transaction_storage.py  question_storage.py  quiz_category_storage.py  quiz_storage.py  role_storage.py  share_friend_storage.py  storage.py  user_response_storage.py  user_storage.py
eco_challenge/daily_task_app/: __init__.py
eco_challenge/daily_task_app/models/: daily_task_history_model.py  daily_task_model.py  user_response_model.py
eco_challenge/daily_task_app/routers/: daily_task_history_router.py  daily_task_router.py  user_response_router.py
eco_challenge/quiz_app/: __init__.py
eco_challenge/quiz_app/models/: answer_model.py  question_model.py  quiz_category_model.py  quiz_model.py
eco_challenge/quiz_app/routers/: answer_router.py  question_router.py  (+2 more)
eco_challenge/routers/: __init__.py  points_count_router.py  points_transaction_router.py  share_friend_router.py  user_router.py
